kubernetes/services/termix-ssh/termix-ssh-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix-ssh
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: termix-ssh
  template:
    metadata:
      labels:
        app: termix-ssh
    spec:
      containers:
        - image: ghcr.io/lukegus/termix:release-1.11.0
          name: termix-ssh
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/data
              name: termix-ssh-data
      volumes:
        - name: termix-ssh-data
          persistentVolumeClaim:
            claimName: termix-ssh-nfs-pvc
