kubernetes/services/termix-ssh/termix-ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: termix-ssh
  namespace: default
spec:
  selector:
    app: termix-ssh
  ports:
  - port: 8080
    targetPort: 8080
